crates/snapshots/snapshots/cli_snapshots__styles__style_scss_descendant.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_scss_descendant

--- step: migrate ---
status: 0
stdout: "--- a/Card.module.scss\n+++ b/Card.module.scss\n@@ -1,3 +1,3 @@\n $m: 12px;\n-.parent { padding: 13px; }\n-.parent .child { margin: $m; }\n+\n+\n--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Card.module.scss';\n-export const Card = () => <div className={styles.parent}><span className={styles.child} /></div>;\n+export const Card = () => <div className=\"p-[13px]\"><span className=\"m-[12px]\" /></div>;\nApplied 2 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: "warning[rebuild-required] Card.module.scss Rebuild this preprocessor entry to refresh its generated CSS.\n"
workspace delta:
  modified Card.module.scss
    before: "$m: 12px;\n.parent { padding: 13px; }\n.parent .child { margin: $m; }\n"
    after: "$m: 12px;\n\n\n"
  modified Card.tsx
    before: "import styles from './Card.module.scss';\nexport const Card = () => <div className={styles.parent}><span className={styles.child} /></div>;\n"
    after: "export const Card = () => <div className=\"p-[13px]\"><span className=\"m-[12px]\" /></div>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
