crates/snapshots/snapshots/cli_snapshots__styles__style_tailwind_prefix.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_tailwind_prefix

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-@media (min-width: 48rem) { .button { padding: 13px; } }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"tw:md:p-[13px]\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@media (min-width: 48rem) { .button { padding: 13px; } }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"tw:md:p-[13px]\">Save</button>;\n"
