crates/snapshots/snapshots/cli_snapshots__styles__style_tier1_idempotent.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_tier1_idempotent

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,22 +0,0 @@\n-.button {\n-  position: absolute;\n-  inset: 0;\n-  left: 2rem;\n-  overflow: hidden;\n-  overflow-x: auto;\n-  z-index: 30;\n-  opacity: 50%;\n-  font-weight: 700;\n-  line-height: 1.25;\n-  letter-spacing: 0.025em;\n-  text-align: center;\n-  flex-direction: column;\n-  align-items: center;\n-  justify-content: space-between;\n-  flex-wrap: wrap;\n-  border-width: 2px;\n-  border-style: dashed;\n-  border-color: #123456;\n-  min-width: 24rem;\n-  max-height: 2rem;\n-}\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"absolute border-2 border-[#123456] border-dashed bottom-0 flex-col flex-wrap font-bold items-center justify-between leading-tight left-8 max-h-8 min-w-sm opacity-50 overflow-x-auto overflow-y-hidden right-0 text-center top-0 tracking-wide z-30\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: ".button {\n  position: absolute;\n  inset: 0;\n  left: 2rem;\n  overflow: hidden;\n  overflow-x: auto;\n  z-index: 30;\n  opacity: 50%;\n  font-weight: 700;\n  line-height: 1.25;\n  letter-spacing: 0.025em;\n  text-align: center;\n  flex-direction: column;\n  align-items: center;\n  justify-content: space-between;\n  flex-wrap: wrap;\n  border-width: 2px;\n  border-style: dashed;\n  border-color: #123456;\n  min-width: 24rem;\n  max-height: 2rem;\n}\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"absolute border-2 border-[#123456] border-dashed bottom-0 flex-col flex-wrap font-bold items-center justify-between leading-tight left-8 max-h-8 min-w-sm opacity-50 overflow-x-auto overflow-y-hidden right-0 text-center top-0 tracking-wide z-30\">Save</button>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
