crates/snapshots/snapshots/cli_snapshots__styles__style_ts_alias.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_ts_alias

--- step: migrate ---
status: 0
stdout: "--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,2 @@\n import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nApplied 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:27 No exclusively supported className references were found.\nwarning[aliased-css-module-reference] helper.ts:2:14-2:49 A CSS Module class is aliased to a binding, so the module is retained.\n"
workspace delta:
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "import styles from './Button.module.css';\nexport const Button = () => <button className=\"p-[13px]\">Save</button>;\n"
