crates/snapshots/snapshots/cli_snapshots__styles__style_unproven_relationship.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_unproven_relationship

--- step: migrate ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unproven-css-module-relationship] Button.module.css:1:1-1:36 The selector `.button > .label` requires a relationship that could not be proven for every usage (unproven-ancestry at [WORKSPACE]/Button.tsx:201), so the rule is retained.\n"
workspace delta:
  unchanged
